fix scrolling on mobile

--- a/css/base.css
+++ b/css/base.css
@@ -5,7 +5,6 @@ html {
     background-color: #000; 
     color: #efefef;
     font-family: 'VT323', monospace;
-    overflow: hidden;
     background: url("/content/background.png") no-repeat center fixed; 
     background-size: cover;
 }
